--- a/_navbar.yml
+++ b/_navbar.yml
@@ -1,8 +1,7 @@
 title: "B&B site"
 type: default
 left:
-
-text: "Home"
-href: index.html
-text: "Rooms"
-href: room-a.html
+    - text: "Home"
+      href: index.html
+    - text: "Rooms"
+      href: room-a.html
